:arrow_up: Upgrades base box to Ubuntu 18.04 (Bionic)
Closes #12

--- a/configuration.yml
+++ b/configuration.yml
@@ -3,7 +3,7 @@ memory: 2048
 cpus: 2
 hostname: hassio
 post_up_message: Hass.io starting... wait a couple of minutes!
-box: ubuntu/xenial64
+box: ubuntu/bionic64
 shares:
   addons: /usr/share/hassio/addons/local
   backup: /usr/share/hassio/backup
