--- a/configuration.yml
+++ b/configuration.yml
@@ -1,7 +1,7 @@
 ---
-memory: 2048
+memory: 1024
 cpus: 2
-hostname: hassio
+hostname: macio
 post_up_message: Hass.io starting... wait a couple of minutes!
 box: ubuntu/bionic64
 shares:
