--- a/configuration.yml
+++ b/configuration.yml
@@ -4,6 +4,7 @@ cpus: 2
 hostname: hassio
 post_up_message: Hass.io starting... wait a couple of minutes!
 box: ubuntu/bionic64
+keep_config: false
 shares:
   addons: /usr/share/hassio/addons/local
   backup: /usr/share/hassio/backup
